# gaia-legacy

./: CMakeLists.txt  ChangeLog  Doxyfile  IDEAS-NG  README  SConstruct  TODO  TODO.OLD
data/: CMakeLists.txt
frontends/: CMakeLists.txt
frontends/gaia-qt/: CMakeLists.txt  ControlWidget.h  GLWidget.cc  GeoCoordSpinbox.cc
frontends/qgaia/: CMakeLists.txt  ControlWidget.cc  ControlWidget.h  ControlWidget.ui  GLWidget.cc  GLWidget.h  Main.cc  SidebarWidget.cc  SidebarWidget.h  SidebarWidget.ui  qgaia.qrc
layers/: CMakeLists.txt
layers/gps/: GPSSource.h  GPSSourceNMEA.cc  GPSSourceNMEA.h  GPSSourceTest.h
layers/grid/: GridLayer.cc  GridLayer.h
layers/test/: TestLayer.h
layers/testlayer1/: TestLayer1.cc
layers/testlayer2/: TestLayer2.cc
layers/worldwind/: FilesystemStorage.h  RawBuffer.cc  SimpleTileStorage.h  SmartPtr.h  Tile.h  WorldWindLayer.cc  WorldWindLayer.h  WorldWindTileManager.h
layers/worldwind/libwwfetch/: wwfetch.h  wwfetch_error.c  wwfetch_image.c  wwfetch_init.c  wwfetch_internal.h
lib/: CMakeLists.txt
lib/libgaia/: CMakeLists.txt  EarthRenderer.cc  EarthRenderer.h  Eye.h  FlatEarthRenderer.cc  FlatEarthRenderer.h  GlobeEarthRenderer.cc  GlobeEarthRenderer.h  Layer.cc  Layer.h  LayerManager.cc  LayerManager.h  LayerMeta.h  MetaLayer.h  Region.cc  Region.h
lib/tiledb/: SConscript  make_test  test.c  test.cpp  tiledb.c  tiledb.h  tiledb_cache.c  tiledb_cache.h  tiledb_config.h  tiledb_defrag.c  tiledb_defrag.h  tiledb_elements.h  tiledb_endian.c  tiledb_endian.h  tiledb_file_io.c  tiledb_file_io.h  tiledb_file_locking.c  tiledb_file_locking.h  tiledb_filesystem_import.c  tiledb_filesystem_import.h  tiledb_internal.c  tiledb_internal.h
lib/tiledb.old/: README  SConscript  tiledb.h  tiledb_data.c  tiledb_endian.c  tiledb_error.c  tiledb_index.c  tiledb_init.c  tiledb_internal.h  tiledb_misc.c  tiledb_single.c
lib/wwfetch/: CMakeLists.txt  SConscript  wwfetch.h  wwfetch_error.c  wwfetch_fetch.c  wwfetch_http.c  wwfetch_image.c  wwfetch_init.c
libgaia/: CMakeLists.txt  Common.h  EarthRenderer.cc  EarthRenderer.h  EarthView.cc  EarthView.h  Eye.h  FlatEarthRenderer.cc  FlatEarthRenderer.h  FlatEarthView.cc  FlatEarthView.h  GlobeEarthRenderer.cc  GlobeEarthRenderer.h  GlobeEarthView.cc  GlobeEarthView.h  Layer.cc  Layer.h  Math.h  Messages.cc  Messages.h  Region.cc  Region.h  Timer.cc  Timer.h  Viewpoint.h
programs/gaia/: CMakeLists.txt  ControlWidget.cc  ControlWidget.h  ControlWidget.ui  Data.h  DoubleSpinBox.cc  DoubleSpinBox.h  EarthView.cc  EarthView.h  Exceptions.h  FilesystemStorage.cc  FilesystemStorage.h  FlatEarthView.cc  FlatEarthView.h  GLWidget.cc  GLWidget.h  GPSLayer.cc  GPSLayer.h  GPSSource.h  GPSSourceGPSD.cc  GPSSourceGPSD.h  GPSSourceNMEA.cc  GPSSourceNMEA.h  GPSSourceTest.cc  GPSSourceTest.h  GeoCoordSpinbox.cc  GeoCoordSpinbox.h  GlobeEarthView.cc  GlobeEarthView.h  GridLayer.cc  GridLayer.h  Hud.cc  Hud.h  HudIcon.cc  HudIcon.h  HudObject.cc  HudObject.h  IndexStorage.cc  IndexStorage.h  Layer.cc  (+47 more)
programs/gaia-cache/: SConscript  core.c  gaia-cache.h  import.c  main.c  stat.c
programs/gaia-cache.old/: SConscript  dump.c  gaia-cache.h  import.c  main.c  stat.c
programs/gaia/layers/gps/: GPSSourceGPSD.cc
programs/gaia/layers/worldwind/: FilesystemStorage.cc  SmartPtr.h  Tile.h  WorldWindLayer.h
programs/gaia/layers/worldwind/libwwfetch/: CMakeLists.txt  wwfetch_error.c
src/gaia/: FlatEarthView.h  GlobeEarthView.cc  Hud.cc  HudObject.cc  PreloadedTextureManager.h  Timer.h
src/gaia-qt/: ControlWidget.cc  GLWidget.h  GeoCoordSpinbox.h  Main.cc
src/gaia/layers/gps/: GPSSourceTest.h
src/gaia/layers/grid/: GridLayer.cc
src/gaia/layers/worldwind/: RawBuffer.h  Tile.cc
src/gaia/layers/worldwind/libwwfetch/: wwfetch_fetch.c  wwfetch_internal.h
src/layers/gps/: GPSLayer.cc  GPSLayer.h  GPSSource.h  GPSSourceGPSD.cc  GPSSourceGPSD.h  GPSSourceNMEA.cc  GPSSourceNMEA.h  GPSSourceTest.cc
src/layers/test/: TestLayer.cc
src/layers/worldwind/: FilesystemStorage.cc  RawBuffer.h  SimpleTileStorage.cc  TextureTile.cc  TextureTile.h  Tile.cc  TileStorage.h  WorldWindFetcher.cc  WorldWindFetcher.h  WorldWindLayer.cc  WorldWindTileManager.cc  WorldWindTileManager.h
src/layers/worldwind/libwwfetch/: wwfetch_data.c  wwfetch_fetch.c  wwfetch_http.c
src/libgaia/: ControlWidget.h  EarthView.h  Exceptions.h  FlatEarthView.h  GLWidget.h  GlobeEarthView.h  Hud.h  Layer.cc  Math.h  PreloadedTextureManager.cc  Viewpoint.cc  Viewpoint.h
