# depends
FIND_PACKAGE(Qt4 REQUIRED)

# defs
ADD_DEFINITIONS(${QT_DEFINITIONS})
INCLUDE_DIRECTORIES(${QT_QTCORE_INCLUDE_DIR} ${QT_QTGUI_INCLUDE_DIR} ${QT_QTOPENGL_INCLUDE_DIR} ../../lib)

# sources
FILE(GLOB qgaia_SRCS *.cc)

FILE(GLOB qgaia_MOC_HDRS [A-Z]*.h)

FILE(GLOB qgaia_UIS *.ui)

# targets
QT4_WRAP_UI(qgaia_UIC_HDRS ${qgaia_UIS})
QT4_WRAP_CPP(qgaia_MOC_SRCS ${qgaia_MOC_HDRS})

ADD_EXECUTABLE(qgaia ${qgaia_SRCS} ${qgaia_MOC_SRCS} ${qgaia_UIC_HDRS})

TARGET_LINK_LIBRARIES(qgaia gaia ${QT_QTOPENGL_LIBRARY})
